--- a/salplink/Cargo.toml
+++ b/salplink/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.18.1", features = ["full"] }
+bytes = "1"
+serde = { version = "1.0", features = ["derive"] }
